fix: now the images are cropped and the button label has changed

--- a/src/app/paginas/foto/foto.component.css
+++ b/src/app/paginas/foto/foto.component.css
@@ -1,6 +1,9 @@
 img {
   filter: grayscale(100%);
-  width: 240px;
+
+  object-fit: cover;
+  width:230px;
+  height:230px;
   transition: 300ms;
 }
 
